<resources>
    <string name="app_name">Pin1-Hopet</string>
    <string name="textoNomeUsuario">Nome</string>
    <string name="textoEmail">E-mail</string>
    <string name="textoSenha">Senha</string>
    <string name="textoConfirmarSenha">Confirmar senha</string>
    <string name="textoCadastrar">Cadastrar</string>
    <string name="NaoCadastro">Cadastre-se aqui</string>
    <string name="Logar">Logar</string>
    <string name="Acesse">Acesse sua conta</string>
    <string name="CriarConta">Crie sua conta aqui</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="nome_usuario_atal">nome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastro_animal">Cadastre seu pet aqui</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="selecionar_foto">Selecionar foto</string>

</resources>
